// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Hero component renders level 1 1`] = `
<div
  class="Hero"
>
  <div
    class="MuiContainer-root container MuiContainer-maxWidthLg"
  >
    <div
      class="wrapper"
    >
      <div
        class="content"
      >
        <h1
          class="MuiTypography-root title Typography Typography--underline MuiTypography-h1"
        >
          H1 Heading
        </h1>
        <div
          class="text"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc non tincidunt quam. Fusce et semper lectus, eu tincidunt ligula. Phasellus suscipit dolor nisl, nec vestibulum odio molestie tincidunt.
        </div>
      </div>
    </div>
  </div>
  <div
    class="image"
    style="background-image: url(path-to-image);"
  />
</div>
`;

exports[`Hero component renders level 2 1`] = `
<div
  class="Hero Hero--slim"
>
  <div
    class="MuiContainer-root container MuiContainer-maxWidthLg"
  >
    <div
      class="wrapper"
    >
      <div
        class="content"
      >
        <h1
          class="MuiTypography-root title Typography Typography--underline MuiTypography-h1"
        >
          H1 Heading
        </h1>
      </div>
    </div>
  </div>
</div>
`;

exports[`Hero component renders level 3 1`] = `
<div
  class="Hero Hero--light Hero--slim"
>
  <div
    class="MuiContainer-root container MuiContainer-maxWidthLg"
  >
    <div
      class="wrapper"
    >
      <div
        class="content"
      >
        <h1
          class="MuiTypography-root title Typography Typography--underline MuiTypography-h1"
        >
          H1 Heading
        </h1>
      </div>
    </div>
  </div>
</div>
`;
